[gd_scene load_steps=9 format=3 uid="uid://5m4ogx0u3xi4"]

[ext_resource type="Texture2D" uid="uid://bliybx3qpf4vp" path="res://Tiny Swords/UI/Banners/Banner_Horizontal.png" id="1_b3jje"]
[ext_resource type="Script" path="res://ui/game_ui.gd" id="1_yssss"]
[ext_resource type="Texture2D" uid="uid://devsuniv7bsxu" path="res://Tiny Swords/Resources/Resources/M_Idle_(NoShadow).png" id="3_srw0s"]
[ext_resource type="Texture2D" uid="uid://darncsu0iah2j" path="res://Tiny Swords/Resources/Resources/G_Idle_(NoShadow).png" id="4_6qk74"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_engo6"]
texture = ExtResource("1_b3jje")
texture_margin_left = 32.0
texture_margin_top = 80.0
texture_margin_right = 32.0
texture_margin_bottom = 112.0
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
region_rect = Rect2(32, 48, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_idik4"]
atlas = ExtResource("3_srw0s")
region = Rect2(40, 48, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_lygrq"]
atlas = ExtResource("4_6qk74")
region = Rect2(40, 48, 56, 56)

[sub_resource type="LabelSettings" id="LabelSettings_umeot"]
font_size = 20
font_color = Color(0, 0, 0, 1)
shadow_size = 2

[node name="GameUI" type="CanvasLayer"]
script = ExtResource("1_yssss")

[node name="TimerLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -29.5
offset_top = 10.0
offset_right = 29.5
offset_bottom = 33.0
grow_horizontal = 2
size_flags_horizontal = 8
text = "00:00"
horizontal_alignment = 1

[node name="ScorePanel" type="Panel" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -160.0
offset_bottom = 119.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_engo6")

[node name="TextureMeat" type="TextureRect" parent="ScorePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 33.0
offset_top = -10.0
offset_right = 89.0
offset_bottom = 46.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.4, 0.4)
texture = SubResource("AtlasTexture_idik4")

[node name="TextureGold" type="TextureRect" parent="ScorePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 33.0
offset_top = -38.0
offset_right = 89.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.4, 0.4)
texture = SubResource("AtlasTexture_lygrq")

[node name="GoldLabel" type="Label" parent="ScorePanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 17.0
offset_right = 33.0
offset_bottom = 45.0
grow_horizontal = 2
size_flags_horizontal = 8
text = "20000"
label_settings = SubResource("LabelSettings_umeot")
horizontal_alignment = 2

[node name="MeatLabel" type="Label" parent="ScorePanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -30.0
offset_top = -74.0
offset_right = 33.0
offset_bottom = -46.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 8
text = "50"
label_settings = SubResource("LabelSettings_umeot")
horizontal_alignment = 2
